--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,65 @@ li {
   margin: 0;
   padding: 0;
 }
+
+.container {
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
+.header {
+  padding: 40px 376px 0;
+  margin: 0 auto;
+  background-color: gray;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* flex-wrap: wrap; */
+}
+
+.h-logo {
+  background-image: url(../img/logo.png);
+  width: 181px;
+  height: 56px;
+  display: block;
+  background-repeat: no-repeat;
+}
+
+.h-menu {
+  display: flex;
+  justify-content: space-between;
+  gap: 63px;
+  align-items: center;
+}
+
+.h-menu-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+.h-menu-item {
+  font-family: Montserrat;
+  font-size: 14px;
+  line-height: 1.2;
+  font-weight: 300;
+  color: #ffffff;
+}
+
+.h-right {
+  display: flex;
+  justify-content: space-between;
+  gap: 28px;
+}
+
+.h-right-cart {
+  background-image: url(../img/icon_cart.png);
+  width: 18px;
+  height: 24px;
+}
+
+.h-right-search {
+  background-image: url(../img/icon_search.png);
+  width: 24px;
+  height: 24px;
+}
