--- a/css/style.css
+++ b/css/style.css
@@ -32,12 +32,31 @@ li {
 }
 
 .h-logo {
-  background-image: url(../img/logo.png);
-  width: 181px;
-  height: 56px;
-  display: block;
-  background-repeat: no-repeat;
+  align-items: center;
+  width: 175px;
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
 }
+
+.link-logo-svg {
+  fill: #fff;
+}
+
+.h-logo:hover:hover .link-logo-svg {
+  fill: #998675;
+}
+
+.link-logo-txt {
+  color: #fff;
+  font-size: 28px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.h-logo:hover:hover .link-logo-txt {
+  color: #998675;
+}
+
 
 .h-menu {
   display: flex;
@@ -178,6 +197,11 @@ li {
   background-color: #95653b;
   transition: 0.2s ease-out;
   
+}
+
+.m-block-link:active {
+  background-color: green;
+  transition: 0.5s ease-out;
 }
 
 .m-block-list {
