--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ li {
 .arrow-left::before {
   content: "";
   position: absolute;
-  top: 475px;
+  top: 120px;
   left: 150px;
   display: inline-block;
   width: 52px;
@@ -149,7 +149,7 @@ li {
 .arrow-right:after {
   content: "";
   position: absolute;
-  top: 475px;
+  top: 120px;
   right: 150px;
   display: inline-block;
   width: 52px;
@@ -222,7 +222,7 @@ li {
 .m-block-link:hover {
   background-color: #95653b;
   transition: 0.2s ease-out;
-  
+
 }
 
 .m-block-link:active {
@@ -250,4 +250,67 @@ li {
   background-color: rgba(255, 255, 255, 0.0);
   outline: 2px solid #d3c1ad;
   transition: 0.1s ease-out;
+}
+
+
+.m-advantage {
+  padding: 80px 346px;
+  display: flex;
+  text-align: center;
+}
+
+.m-advantage-block {
+  display: block;
+  max-width: 25%;
+  text-decoration: none;
+}
+
+.m-advantage-block:hover .m-advantage-icon {
+  fill: #c7b299;
+}
+
+.m-advantage-block:hover .m-advantage-title {
+  color: #c7b299;
+}
+
+.m-advantage-block:hover .m-advantage-desciption:after {
+  border-color: #c7b299;
+}
+
+.m-advantage-title {
+  display: block;
+  width: 100%;
+  margin-bottom: 20px;
+  font-family: Raleway;
+  font-size: 22px;
+  line-height: 1.2;
+  font-weight: 600;
+  color: #555555;
+}
+
+.m-advantage-desciption {
+  display: block;
+  width: 90%;
+  margin: 0 auto;
+  text-align: center;
+  font-family: Montserrat;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 300;
+  color: #8c8c8c;
+}
+
+.m-advantage-desciption:after {
+  display: block;
+  content: "";
+  width: 70px;
+  border-bottom: 3px solid #f1eee9;
+  margin: 0 auto;
+  margin-top: 30px;
+}
+
+.m-advantage-icon {
+  margin: 0 auto;
+  fill: #555555;
+  margin-bottom: 30px;
 }
