--- a/css/style.css
+++ b/css/style.css
@@ -314,3 +314,15 @@ li {
   fill: #555555;
   margin-bottom: 30px;
 }
+
+.m-advantage-block:nth-child(2)>svg {
+  margin-top: 9px;
+}
+
+.m-advantage-block:nth-child(3)>svg {
+  margin-top: 5px;
+}
+
+.m-advantage-block:nth-child(4)>svg {
+  margin-top: 13px;
+}
