--- a/css/style.css
+++ b/css/style.css
@@ -404,10 +404,6 @@ li {
   align-items: center;
 }
 
-.m-purchase-wrapper {
-  
-}
-
 .m-purchase-title {
   font-family: Raleway;
   font-size: 28px;
@@ -455,4 +451,142 @@ li {
 .m-purchase-button:active {
   background-color: green;
   transition: 0.2s ease-out;
+}
+
+.m-projects {
+  padding: 80px 376px;
+}
+
+.m-projects-header {
+  text-align: center;
+}
+
+.m-projects-header-title {
+  font-family: Raleway;
+  font-size: 30px;
+  line-height: 1.2;
+  font-weight: 600;
+  color: #555555;
+  margin-bottom: 24px;
+}
+
+.m-projects-header-description {
+  font-family: Montserrat;
+  font-size: 16px;
+  line-height: 28px;
+  font-weight: 300;
+  color: #8c8c8c;
+  padding-bottom: 40px;
+}
+
+.m-projects-header-menu {
+  margin-bottom: 40px;
+}
+
+.m-projects-header-menu-list {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.m-projects-header-menu-item {
+  font-family: Montserrat;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 300;
+  color: #8c8c8c;
+  padding: 10px 24px;
+  background-color: rgba(17,17,17,0.0);
+  border: 1px solid #ebebeb;
+  border-radius: 3px;
+  transition: 0.2s ease-out;
+}
+
+.m-projects-header-menu-item:hover {
+  background-color: #998675;
+  border-radius: 3px;
+  transition: 0.2s ease-out;
+  color: #ffffff;
+}
+
+
+
+.m-projects-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  row-gap: 30px;
+}
+
+.m-projects-block {
+  display: block;
+  width: 32.1%;
+  text-decoration: none;
+  background-color: #fbfaf8;
+
+}
+
+
+.m-projects-link {
+  position: absolute;
+}
+
+
+.m-projects-block:hover {
+  background-color: #362f2d;
+}
+
+.m-projects-block:hover .m-project-block-wrapper::before {
+  border-bottom: 10px solid #362f2d;
+}
+
+.m-projects-block:hover .m-projects-block-title {
+  color: #ffffff;
+}
+
+.m-projects-block:hover .m-projects-block-description {
+  color: #c7b299;
+}
+
+.m-projects-block:hover .m-projects-block-img {
+  filter: brightness(40%);
+}
+
+.m-projects-block-img {
+  width: 100%;
+  position: relative;
+}
+
+.m-project-block-wrapper {
+  padding: 30px 0 27px 28px;
+  position: relative;
+}
+
+.m-project-block-wrapper::before {
+  display: block;
+  content: "";
+  position: absolute;
+  border: 15px solid transparent;
+  border-bottom: 10px solid #fbfaf8;
+  top: -29px;
+  left: 20px;
+}
+
+.m-projects-block-title {
+  font-family: Raleway;
+  font-size: 20px;
+  line-height: 1.2;
+  font-weight: 500;
+  color: #c7b299;
+  display: block;
+  margin-bottom: 14px;
+}
+
+.m-projects-block-description {
+  font-family: Montserrat;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 300;
+  color: #d1d1d1;
+  display: block;
 }
