--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@ li {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* flex-wrap: wrap; */
 }
 
 .h-logo {
@@ -363,7 +362,7 @@ li {
   width: 770px;
 }
 
-.m-slider-img > img {
+.m-slider-img>img {
   vertical-align: bottom;
 }
 
@@ -500,7 +499,7 @@ li {
   font-weight: 300;
   color: #8c8c8c;
   padding: 10px 24px;
-  background-color: rgba(17,17,17,0.0);
+  background-color: rgba(17, 17, 17, 0.0);
   border: 1px solid #ebebeb;
   border-radius: 3px;
   transition: 0.2s ease-out;
@@ -648,17 +647,16 @@ li {
 }
 
 .m-projects-button:active {
-  background-color: green;;
+  background-color: green;
+  ;
   transition: 0.2s ease-out;
 }
 
 .m-video {
-position: relative;
+  position: relative;
 }
 
-.m-video-player {
-
-}
+.m-video-player {}
 
 .m-video-txt {
   position: absolute;
@@ -681,7 +679,7 @@ position: relative;
   background-size: contain;
   background-repeat: no-repeat;
   border: none;
-  background-color:rgba(0,0,0,0.0);
+  background-color: rgba(0, 0, 0, 0.0);
   margin-bottom: 44px;
 }
 
@@ -741,14 +739,12 @@ position: relative;
   font-family: Montserrat;
   font-size: 16px;
   line-height: 28px;
-  font-weight: 400;
+  font-weight: 300;
   color: #8c8c8c;
   padding-bottom: 45px;
 }
 
-.m-mobile-list {
-
-}
+.m-mobile-list {}
 
 .m-mobile-item {
   font-family: Montserrat;
@@ -769,4 +765,50 @@ position: relative;
   position: absolute;
   margin-left: -50px;
   margin-top: 5px
+}
+
+.m-info {
+  padding: 69px 504px 60px 496px;
+  display: flex;
+  justify-content: space-between;
+  background-color: #f4f5f8;
+  background-image: linear-gradient(90.0deg, #211b19 0%, #4e3427 100%);
+}
+
+.m-info-wrapper {
+  width: 20%;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.m-info-img {
+  margin-bottom: 30px;
+
+}
+
+.m-info-title {
+  font-family: Montserrat;
+  font-size: 48px;
+  line-height: 36px;
+  font-weight: 200;
+  color: #ffffff;
+  margin-bottom: 21px;
+}
+
+.m-info-descroption {
+  font-family: Montserrat;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 300;
+  text-transform: uppercase;
+  color: #c7b299;
+  
+}
+
+.m-info-descroption:after {
+  content: "";
+  display: block;
+  width: 30px;
+  border-bottom: 2px solid #fff;
+  margin: 30px auto 0 auto;
 }
