--- a/css/style.css
+++ b/css/style.css
@@ -480,6 +480,8 @@ li {
   font-weight: 300;
   color: #8c8c8c;
   padding-bottom: 40px;
+  width: 70%;
+  margin: 0 auto;
 }
 
 .m-projects-header-menu {
@@ -764,7 +766,9 @@ li {
   background-image: url(../img/arrow-list.svg);
   position: absolute;
   margin-left: -50px;
-  margin-top: 5px
+  margin-top: 5px;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 .m-info {
@@ -811,4 +815,180 @@ li {
   width: 30px;
   border-bottom: 2px solid #fff;
   margin: 30px auto 0 auto;
+}
+
+.m-post {
+  padding: 80px 375px;
+  text-align: center;
+}
+
+.m-post-title {
+  font-family: Raleway;
+  font-size: 30px;
+  line-height: 1.2;
+  font-weight: 600;
+  color: #555555;
+  margin-bottom: 30px;
+}
+
+.m-post-description {
+  font-family: Montserrat;
+  font-size: 16px;
+  line-height: 28px;
+  font-weight: 300;
+  color: #8c8c8c;
+  margin-bottom: 40px;
+}
+
+.m-post-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.m-post-block {
+  text-align: left;
+  width: 31%;
+  background-color: rgba(119,119,119,0.0);
+  border: 1px solid #f8f8f8;
+  position: relative;
+  transition: 0.2s ease-in-out;
+}
+
+.m-post-block:hover {
+  background-color: #362f2d;
+  transition: 0.2s ease-in-out;
+}
+
+.m-post-block:hover .m-post-block-time-date {
+  background-color: #c7b299;
+  transition: 0.2s ease-in-out;
+}
+
+.m-post-block:hover .m-post-block-time-month {
+  background-color: #a48d72;
+  transition: 0.2s ease-in-out;
+}
+
+.m-post-block:hover .m-post-block-title {
+  color: #c7b299;
+  transition: 0.2s ease-in-out;
+}
+
+.m-post-block:hover .m-post-block-description {
+  color: #ffffff;
+  transition: 0.2s ease-in-out;
+}
+
+.m-post-block-img {
+  vertical-align: bottom;
+  height: auto;
+  width: 100%
+}
+
+.m-post-block-time {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.m-post-block-time-date {
+  display: block;
+  font-family: Montserrat;
+  font-size: 24px;
+  line-height: 20px;
+  font-weight: 300;
+  color: #ffffff;
+  background-color: #363636;
+  border-radius: 3px 3px 0px 0px;
+  padding: 9px 10px;
+  margin: 0;
+  transition: 0.2s ease-in-out;
+}
+
+.m-post-block-time-month {
+  display: block;
+  font-family: Montserrat;
+  font-size: 12px;
+  font-weight: 400;
+  color: #ffffff;
+  background-color: #252525;
+  border-radius: 0px 0px 3px 3px;
+  padding: 7px 13px;
+  transition: 0.2s ease-in-out;
+}
+
+.m-post-block-wrapper {
+  padding: 30px 30px 33px 30px;
+}
+
+.m-post-block-title {
+  font-family: Raleway;
+  font-size: 20px;
+  line-height: 1.2;
+  font-weight: 500;
+  color: #555555;
+  margin-bottom: 20px;
+  transition: 0.2s ease-in-out;
+}
+
+.m-post-block-description {
+  font-family: Montserrat;
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 300;
+  color: #8c8c8c;
+  margin-bottom: 27px;
+  transition: 0.2s ease-in-out;
+}
+
+.m-post-block-link {
+  font-family: Montserrat;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 300;
+  color: #c7b299;
+  text-decoration: none;
+  position: relative;
+}
+
+.m-post-block-link::after {
+  content: "";
+  display: block;
+  border-top: 4px solid transparent;
+  border-left: 5px solid #c7b299;;
+  border-bottom: 4px solid transparent;
+  position: absolute;
+  right: -10px;
+  bottom: 3px;
+}
+
+.m-post-block-list {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  position: absolute;
+  top: 187px;
+  left: 50%;
+  margin-left: -47px;
+  text-align: center;
+}
+
+.m-post-block-item {
+ 
+}
+
+.m-post-block-item-link {
+  display: block;
+  width: 11px;
+  height: 11px;
+  opacity: 0.3;
+  background-color: #ffffff;
+  border-radius: 50%;
+  transition: 0.2s ease-in-out;
+}
+
+.m-post-block-item-link:hover {
+  background-color: rgba(255,255,255,0.0);
+  outline: 2px solid #d3c1ad;
+  transition: 0.2s ease-in-out;
 }
